--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <div id="navbar">
-      <img id="logo" src="img/logo-puro.png" alt="" />
+      <a href="#hero"><img id="logo" src="img/logo-puro.png" alt="" /></a>
       <div class="nav-lista">
-        <a href="#hero">inicio</a>
-        <a href="#secao-empresa">empresa</a>
         <a href="#secao-servicos">servicos</a>
         <a href="#secao-parceiros">parceiros</a>
+        <a href="#secao-empresa">empresa</a>
         <a href="#secao-certificados">certificados</a>
         <a href="#secao-contato">contato</a>
       </div>
@@ -29,61 +28,29 @@
 
     <div id="secao-empresa">
       <h2>EMPRESA /</h2>
-      <h3>POLITICA E OBJETIVO</h3>
-      <h3>VISÃO</h3>
-      <h3>MISSÃO</h3>
-      <li>
-        <ul>
-          [
-          <li>
-            <div>
-              Política e Objetivo
-              <div>
-                <p>
-                  POLÍTICA DE GESTÃO INTEGRADA
-                </p>
-                (Qualidade, Meio Ambiente, Segurança, Saúde no Trabalho e
-                Responsabilidade Social) A SIFC busca melhorar continuamente à
-                eficácia do seu Sistema de Gestão Integrado se comprometendo em
-                garantir a qualidade de seus serviços com foco na satisfação dos
-                seus clientes e cumprindo as exigências contratuais,
-                especificações, normas e requisitos legais aplicáveis as suas
-                atividades. Qualidade, respeito ao meio ambiente, segurança,
-                saúde do trabalhador e responsabilidade social são prioridades
-                nos serviços prestados, prevenindo lesões, doenças ocupacionais,
-                poluições de qualquer natureza, incluindo critérios responsáveis
-                em suas contratações diretas e indiretas de mão-de-obra,
-                aquisição de insumos e de seus meios operacionais integrados.
-              </div>
-            </div>
-          </li>
-          <li>
-            <div>
-              <p></p>
-              <ul>
-                <li>
-                  <p>
-                    Visão
-                  </p>
-                  “Ser reconhecida como grande parceira na área de prestação de
-                  serviços visando o atendimento das necessidades dos Clientes,
-                  sendo sinônimo de qualidade e confiabilidade.”
-                </li>
-                <li>
-                  <p>
-                    MISSÃO
-                  </p>
-                  “Agregar valor aos processos dos nossos Clientes por meio da
-                  prestação de serviços de alta qualidade, voltados para a
-                  gestão de ativos, nas áreas de produção, manutenção,
-                  materiais, engenharia e implantação de empreendimentos.”
-                </li>
-              </ul>
-            </div>
-          </li>
-          ]
-        </ul>
-      </li>
+      <div class="grid-a empresa-historia">
+        <h3>HISTORIA</h3>
+        <p>Criada em 1991, a SIFC vem desempenhando uma trajetória de constante crescimento com o cadastro na Petrobras iniciado no ano de 1996 e o primeiro contrato de longa duração na Refinaria Duque de Caxias, em 1998.
+        <p>Em 2002, a SIFC conquista a  certificação de qualidade ISO 9001.</p>  
+        <p>Contratos de longa duração são constantemente renovados atendendo os anseios de seus clientes. A Bayer do Brasil, como exemplo, contou com a SIFC em contratos ao longo de 10 anos em sua unidade industrial de Belford Roxo/RJ, tendo a SIFC conquistado diversos prêmios internos  voltados para a qualidade e a segurança.</p>
+        <p>Em 2010, a SIFC inicia o contrato de manutenção de isolamento térmico, refratário e proteção passiva nas plataformas da Bacia de Campos. Ao longo desse período, vem mantendo uma excelente avaliação de desempenho.</p>
+        <p>No ano de 2012, a SIFC aprimora o seu plano de gestão integrado agregando a certificação de saúde e segurança OHSAS 18001. Novas certificações estão na lista de suas prioridades.</p>
+        <p>Também em 2012, a SIFC  realiza o primeiro contrato de isolamento térmico em plataforma FPSO com sistema de acabamento não metálico (Projeto Cidade de Paraty - SBM OFFSHORE) em parceria com fornecedor internacional de renome nessa linha de produtos. Contratos subsequentes com o mesmo sistema são realizados em diversos projetos voltados para serviços offshore.</p>
+        <p>Outras atividades nos setores energético, siderúrgico, químico, etc, fazem parte do currículo da SIFC. Em cada trabalho conquistado, a dedicação e a busca de melhores soluções nos levam à recontratações, por parte das empresas, em suas manutenções rotineiras.</p>
+        <p>Seriedade, profissionalismo, estudo detalhado dos casos e compromisso com seus clientes são as marcas que diferem a SIFC da grande parte de empresas nesse ramo de negócios.</p>
+      </div>
+      <div class="grid-b empresa-politica">
+        <h3>POLITICA E OBJETIVO</h3>
+        <p>(Qualidade, Meio Ambiente, Segurança, Saúde no Trabalho e Responsabilidade Social) A SIFC busca melhorar continuamente à eficácia do seu Sistema de Gestão Integrado se comprometendo em garantir a qualidade de seus serviços com foco na satisfação dos seus clientes e cumprindo as exigências contratuais, especificações, normas e requisitos legais aplicáveis as suas atividades. Qualidade, respeito ao meio ambiente, segurança, saúde do trabalhador e responsabilidade social são prioridades nos serviços prestados, prevenindo lesões, doenças ocupacionais, poluições de qualquer natureza, incluindo critérios responsáveis em suas contratações diretas e indiretas de mão-de-obra, aquisição de insumos e de seus meios operacionais integrados.</p>
+      </div>
+      <div class="grid-c empresa-visao">
+        <h3>VISÃO</h3>
+        <p>“Ser reconhecida como grande parceira na área de prestação de serviços visando o atendimento das necessidades dos Clientes, sendo sinônimo de qualidade e confiabilidade.”</p>
+      </div>
+      <div class="grid-d empresa-missao">
+        <h3>MISSÃO</h3>
+        <p>“Agregar valor aos processos dos nossos Clientes por meio da prestação de serviços de alta qualidade, voltados para a gestão de ativos, nas áreas de produção, manutenção, materiais, engenharia e implantação de empreendimentos.”</p>
+      </div>
     </div>
 
     <div id="secao-servicos">
