Melhorias no HMTL

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 
     <div id="secao-servicos">
       <h2>SERVIÇOS /</h2>
+      <div class="grid-servicos">
+        <div class="grid-servicos-item">ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <div>
         <p>
           SERVIÇOS*
@@ -133,16 +144,9 @@
 
     <div id="secao-parceiros">
       <h2>PARCEIROS /</h2>
-      <h3>FORNECEDORES</h3>
-      <h3>CLIENTES</h3>
-      <div>
-        <p>
-          FORNECEDORES*
-        </p>
-
-        Temos, como parceiros em cada área de atuação, empresas de renome, no
-        cenário nacional e internacional, tais como:
-
+      <div class="grid-a">
+        <h3>FORNECEDORES</h3>
+        <p>Temos, como parceiros em cada área de atuação, empresas de renome, no cenário nacional e internacional, tais como:</p>
         <ul>
           <li>
             Morganite Brasil Ltda
@@ -182,12 +186,10 @@
           </li>
         </ul>
       </div>
-
-      <div>
-        CLIENTES*
+      <div class="grid-b">
+        <h3>CLIENTES</h3>
+        <p>Contratos, nas diversas especialidades, em clientes de médio e grande porte, tais como:</p>
         <ul>
-          Contratos, nas diversas especialidades, em clientes de médio e grande
-          porte, tais como:
           <li>
             Petróleo Brasileiro S/A - PETROBRAS
           </li>
@@ -259,6 +261,7 @@
     </div>
 
     <div id="secao-contato">
+      <h2>CONTATO /</h2>
       <li>
         TRABALHE CONOSCO/ FORM {OLHAR NA HORA}
       </li>
