--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <title>SIFC</title>
   </head>
   <body>
-    <div id="navbar">
-      <a href="#hero"><img id="logo" src="img/logo-puro.png" alt="" /></a>
-      <div class="nav-lista">
-        <a href="#secao-servicos">servicos</a>
-        <a href="#secao-parceiros">parceiros</a>
-        <a href="#secao-empresa">empresa</a>
-        <a href="#secao-certificados">certificados</a>
-        <a href="#secao-contato">contato</a>
-      </div>
-    </div>
-
     <div id="hero">
       <p>
         Novidades, tweets??
@@ -26,30 +15,97 @@
       <img src="" alt="logo do certificado do ISO 9001" />
     </div>
 
+    <div id="navbar">
+      <a href="#secao-servicos">servicos</a>
+      <a href="#secao-parceiros">parceiros</a>
+      <a href="#hero"><img id="logo" src="img/logo-puro.png" alt="" /></a>
+      <a href="#secao-empresa">empresa</a>
+      <a href="#secao-certificados">certificados</a>
+      <a href="#secao-contato">contato</a>
+    </div>
+
     <div id="secao-empresa">
       <h2>EMPRESA /</h2>
       <div class="grid-a empresa-historia">
         <h3>HISTORIA</h3>
-        <p>Criada em 1991, a SIFC vem desempenhando uma trajetória de constante crescimento com o cadastro na Petrobras iniciado no ano de 1996 e o primeiro contrato de longa duração na Refinaria Duque de Caxias, em 1998.
-        <p>Em 2002, a SIFC conquista a  certificação de qualidade ISO 9001.</p>  
-        <p>Contratos de longa duração são constantemente renovados atendendo os anseios de seus clientes. A Bayer do Brasil, como exemplo, contou com a SIFC em contratos ao longo de 10 anos em sua unidade industrial de Belford Roxo/RJ, tendo a SIFC conquistado diversos prêmios internos  voltados para a qualidade e a segurança.</p>
-        <p>Em 2010, a SIFC inicia o contrato de manutenção de isolamento térmico, refratário e proteção passiva nas plataformas da Bacia de Campos. Ao longo desse período, vem mantendo uma excelente avaliação de desempenho.</p>
-        <p>No ano de 2012, a SIFC aprimora o seu plano de gestão integrado agregando a certificação de saúde e segurança OHSAS 18001. Novas certificações estão na lista de suas prioridades.</p>
-        <p>Também em 2012, a SIFC  realiza o primeiro contrato de isolamento térmico em plataforma FPSO com sistema de acabamento não metálico (Projeto Cidade de Paraty - SBM OFFSHORE) em parceria com fornecedor internacional de renome nessa linha de produtos. Contratos subsequentes com o mesmo sistema são realizados em diversos projetos voltados para serviços offshore.</p>
-        <p>Outras atividades nos setores energético, siderúrgico, químico, etc, fazem parte do currículo da SIFC. Em cada trabalho conquistado, a dedicação e a busca de melhores soluções nos levam à recontratações, por parte das empresas, em suas manutenções rotineiras.</p>
-        <p>Seriedade, profissionalismo, estudo detalhado dos casos e compromisso com seus clientes são as marcas que diferem a SIFC da grande parte de empresas nesse ramo de negócios.</p>
+        <p>
+          Criada em 1991, a SIFC vem desempenhando uma trajetória de constante
+          crescimento com o cadastro na Petrobras iniciado no ano de 1996 e o
+          primeiro contrato de longa duração na Refinaria Duque de Caxias, em
+          1998.
+        </p>
+        <p>Em 2002, a SIFC conquista a certificação de qualidade ISO 9001.</p>
+        <p>
+          Contratos de longa duração são constantemente renovados atendendo os
+          anseios de seus clientes. A Bayer do Brasil, como exemplo, contou com
+          a SIFC em contratos ao longo de 10 anos em sua unidade industrial de
+          Belford Roxo/RJ, tendo a SIFC conquistado diversos prêmios internos
+          voltados para a qualidade e a segurança.
+        </p>
+        <p>
+          Em 2010, a SIFC inicia o contrato de manutenção de isolamento térmico,
+          refratário e proteção passiva nas plataformas da Bacia de Campos. Ao
+          longo desse período, vem mantendo uma excelente avaliação de
+          desempenho.
+        </p>
+        <p>
+          No ano de 2012, a SIFC aprimora o seu plano de gestão integrado
+          agregando a certificação de saúde e segurança OHSAS 18001. Novas
+          certificações estão na lista de suas prioridades.
+        </p>
+        <p>
+          Também em 2012, a SIFC realiza o primeiro contrato de isolamento
+          térmico em plataforma FPSO com sistema de acabamento não metálico
+          (Projeto Cidade de Paraty - SBM OFFSHORE) em parceria com fornecedor
+          internacional de renome nessa linha de produtos. Contratos
+          subsequentes com o mesmo sistema são realizados em diversos projetos
+          voltados para serviços offshore.
+        </p>
+        <p>
+          Outras atividades nos setores energético, siderúrgico, químico, etc,
+          fazem parte do currículo da SIFC. Em cada trabalho conquistado, a
+          dedicação e a busca de melhores soluções nos levam à recontratações,
+          por parte das empresas, em suas manutenções rotineiras.
+        </p>
+        <p>
+          Seriedade, profissionalismo, estudo detalhado dos casos e compromisso
+          com seus clientes são as marcas que diferem a SIFC da grande parte de
+          empresas nesse ramo de negócios.
+        </p>
       </div>
       <div class="grid-b empresa-politica">
         <h3>POLITICA E OBJETIVO</h3>
-        <p>(Qualidade, Meio Ambiente, Segurança, Saúde no Trabalho e Responsabilidade Social) A SIFC busca melhorar continuamente à eficácia do seu Sistema de Gestão Integrado se comprometendo em garantir a qualidade de seus serviços com foco na satisfação dos seus clientes e cumprindo as exigências contratuais, especificações, normas e requisitos legais aplicáveis as suas atividades. Qualidade, respeito ao meio ambiente, segurança, saúde do trabalhador e responsabilidade social são prioridades nos serviços prestados, prevenindo lesões, doenças ocupacionais, poluições de qualquer natureza, incluindo critérios responsáveis em suas contratações diretas e indiretas de mão-de-obra, aquisição de insumos e de seus meios operacionais integrados.</p>
+        <p>
+          (Qualidade, Meio Ambiente, Segurança, Saúde no Trabalho e
+          Responsabilidade Social) A SIFC busca melhorar continuamente à
+          eficácia do seu Sistema de Gestão Integrado se comprometendo em
+          garantir a qualidade de seus serviços com foco na satisfação dos seus
+          clientes e cumprindo as exigências contratuais, especificações, normas
+          e requisitos legais aplicáveis as suas atividades. Qualidade, respeito
+          ao meio ambiente, segurança, saúde do trabalhador e responsabilidade
+          social são prioridades nos serviços prestados, prevenindo lesões,
+          doenças ocupacionais, poluições de qualquer natureza, incluindo
+          critérios responsáveis em suas contratações diretas e indiretas de
+          mão-de-obra, aquisição de insumos e de seus meios operacionais
+          integrados.
+        </p>
       </div>
       <div class="grid-c empresa-visao">
         <h3>VISÃO</h3>
-        <p>“Ser reconhecida como grande parceira na área de prestação de serviços visando o atendimento das necessidades dos Clientes, sendo sinônimo de qualidade e confiabilidade.”</p>
+        <p>
+          “Ser reconhecida como grande parceira na área de prestação de serviços
+          visando o atendimento das necessidades dos Clientes, sendo sinônimo de
+          qualidade e confiabilidade.”
+        </p>
       </div>
       <div class="grid-d empresa-missao">
         <h3>MISSÃO</h3>
-        <p>“Agregar valor aos processos dos nossos Clientes por meio da prestação de serviços de alta qualidade, voltados para a gestão de ativos, nas áreas de produção, manutenção, materiais, engenharia e implantação de empreendimentos.”</p>
+        <p>
+          “Agregar valor aos processos dos nossos Clientes por meio da prestação
+          de serviços de alta qualidade, voltados para a gestão de ativos, nas
+          áreas de produção, manutenção, materiais, engenharia e implantação de
+          empreendimentos.”
+        </p>
       </div>
     </div>
 
@@ -58,14 +114,14 @@
       <div class="grid-servicos">
         <div class="grid-servicos-item">ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
       <div>
         <p>
           SERVIÇOS*
@@ -146,7 +202,10 @@
       <h2>PARCEIROS /</h2>
       <div class="grid-a">
         <h3>FORNECEDORES</h3>
-        <p>Temos, como parceiros em cada área de atuação, empresas de renome, no cenário nacional e internacional, tais como:</p>
+        <p>
+          Temos, como parceiros em cada área de atuação, empresas de renome, no
+          cenário nacional e internacional, tais como:
+        </p>
         <ul>
           <li>
             Morganite Brasil Ltda
@@ -188,7 +247,10 @@
       </div>
       <div class="grid-b">
         <h3>CLIENTES</h3>
-        <p>Contratos, nas diversas especialidades, em clientes de médio e grande porte, tais como:</p>
+        <p>
+          Contratos, nas diversas especialidades, em clientes de médio e grande
+          porte, tais como:
+        </p>
         <ul>
           <li>
             Petróleo Brasileiro S/A - PETROBRAS
