--- a/index.html
+++ b/index.html
@@ -8,20 +8,247 @@
     <title>SIFC</title>
   </head>
   <body>
-    <div id="hero">
+    <div id="sifc">
       <p>
-        Novidades, tweets??
+        Somos uma empresa que vai isolar o seu térmico! Aparecendo com paralax
       </p>
       <img src="" alt="logo do certificado do ISO 9001" />
     </div>
 
     <div id="navbar">
-      <a href="#secao-servicos">servicos</a>
-      <a href="#secao-parceiros">parceiros</a>
-      <a href="#hero"><img id="logo" src="img/logo-puro.png" alt="" /></a>
-      <a href="#secao-empresa">empresa</a>
+      <a href="#secao-servicos">serviços</a>
       <a href="#secao-certificados">certificados</a>
+      <a href="#sifc"><img id="logo" src="img/logo-puro.png" alt="" /></a>
+      <a href="#secao-parceiros">parceiros</a>
+      <a href="#secao-empresa">empresa</a>
       <a href="#secao-contato">contato</a>
+    </div>
+
+    <div id="secao-servicos">
+      <div>
+        <h2>SERVIÇOS /</h2>
+        <div class="grid-servicos">
+          <div>ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
+          <div>PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)</div>
+          <div>INJEÇÃO DE ESPUMA DE POLIURETANO</div>      
+        </div>
+      </div>
+
+      <!--
+      <div>
+        <p>
+          SERVIÇOS*
+        </p>
+        <ul>
+          <li class="servico">
+            ISOLAMENTO TÉRMICO (QUENTE E FRIO)
+          </li>
+          <li class="servico">
+            PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)
+          </li>
+          <li class="servico">
+            INJEÇÃO DE ESPUMA DE POLIURETANO
+          </li>
+          <li class="servico">
+            FUNILARIA ESPECIALIZADA
+          </li>
+          <li class="servico">
+            SISTEMAS ACÚSTICOS
+          </li>
+          <li class="servico">
+            PINTURA INDUSTRIAL
+          </li>
+          <li class="servico">
+            REVESTIMENTOS REFRATÁRIOS
+          </li>
+          <li class="servico">
+            PISOS ANTIÁCIDO
+          </li>
+          <li class="servico">
+            FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO
+          </li>
+          <li class="servico">
+            ANDAIMES INDUSTRIAIS
+          </li>
+        </ul>
+      </div>
+      -->
+
+      <div>
+        <h2>OBRAS /</h2>
+
+        <p>
+          Modalidades além do funilaria
+        </p>
+        <div class="grid-obras">
+          <div>ALPINISMO INDUSTRIAL</div>
+          <div>ANDAIMES INDUSTRIAIS</div>
+          <div>REVESTIMENTO REFRATÁRIOS</div>      
+        </div>
+
+        <!--
+        <ul>
+          <li>
+            ALPINISMO INDUSTRIAL
+          </li>
+          <li>
+            ANDAIMES INDUSTRIAIS
+          </li>
+          <li>
+            REVESTIMENTO REFRATÁRIOS
+          </li>
+          <li>
+            FUNILARIA ESPECIALIZADA
+          </li>
+          <li>
+            ISOLAMENTO TÉRMICO
+          </li>
+          <li>
+            JATEAMENTO
+          </li>
+          <li>
+            PINTURA INDUSTRIAL
+          </li>
+          <li>
+            PISO ANTI-ÁCIDO
+          </li>
+          <li>
+            PROTEÇÃO PASSIVA CONTRA FOGO
+          </li>
+        </ul>
+        -->
+
+      </div>
+    </div>
+
+    <div id="secao-certificados">
+      <h2>CERTIFICAÇÕES /</h2>
+
+      <div>
+        <ul>
+          <li>
+            <p>CERTIFICAÇÃO ISO 9001:2015</p>
+            <p>DOWNLOADS AQUI</p>
+          </li>
+
+          <li>
+            <p>CERTIFICAÇÃO OHSAS 18001:2007</p>
+            <p>DOWNLOADS AQUI</p>
+          </li>
+
+          <li>
+            <p>
+              Cadastro de registro de profissionais ou entidades habilitadas para
+              exercer atividades de segurança contra incêndio e pânico junto à
+              Diretoria de Serviços Técnicos do Corpo de Bombeiros do Estado do
+              Rio de janeiro
+            </p>
+            <a href="">
+              HABILITAÇÃO CBMERJ - CREDENCIAMENTO PARA ATIVIDADES DE SEGURANÇA
+              CONTRA INCÊNDIO
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="secao-parceiros">
+      <h2>PARCEIROS /</h2>
+      <div class="grid-a">
+        <h3>CLIENTES</h3>
+        <p>
+          Contratos, nas diversas especialidades, em clientes de médio e grande
+          porte, tais como:
+        </p>
+        <ul>
+          <li>
+            Petróleo Brasileiro S/A - PETROBRAS
+          </li>
+          <li>
+            Bayer S/A
+          </li>
+          <li>
+            Petrobrás Distribuidora S/A – PETROBRÁS BR
+          </li>
+          <li>
+            Alfa Laval Aalborg Ind. e Com. Ltda
+          </li>
+          <li>
+            GE Celma S/A
+          </li>
+          <li>
+            UTE Norte Fluminense S/A
+          </li>
+          <li>
+            Gerdau Aços Longos S/A
+          </li>
+          <li>
+            SBM Offshore
+          </li>
+          <li>
+            Estaleiro Brasa
+          </li>
+          <li>
+            Siemens
+          </li>
+          <li>
+            Usina Elétrica a Gás de Araucária - UEGA
+          </li>
+          <li>
+            Furnas
+          </li>
+        </ul>
+      </div>
+      <div class="grid-b">
+        <h3>FORNECEDORES</h3>
+        <p>
+          Trabalhamos com os melhores da indústria
+        </p>
+        <!--
+        <p>
+          Temos, como parceiros em cada área de atuação, empresas de renome, no
+          cenário nacional e internacional, tais como:
+        </p>
+        -->
+        <ul>
+          <li>
+            Morganite Brasil Ltda
+          </li>
+          <li>
+            Unifrax Brasil Ltda
+          </li>
+          <li>
+            IBAR Ltda
+          </li>
+          <li>
+            Akzo Nobel Ltda – Tintas International
+          </li>
+          <li>
+            Ind. de Isolantes Térmicos Calorisol Ltda
+          </li>
+          <li>
+            Rockfibras Isolantes Térmicos e Acústicos
+          </li>
+          <li>
+            Sherwin Williams do Brasil – Tintas Sumaré
+          </li>
+          <li>
+            Polyurethane Indústria e Comércio Ltda
+          </li>
+          <li>
+            TST Isolantes Térmicos e Refratários Ltda
+          </li>
+          <li>
+            Altec Alumínio Ltda
+          </li>
+          <li>
+            Fibertex Louveira Produtos Têxteis Ltda
+          </li>
+          <li>
+            SH Andaimes
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div id="secao-empresa">
@@ -109,219 +336,6 @@
       </div>
     </div>
 
-    <div id="secao-servicos">
-      <h2>SERVIÇOS /</h2>
-      <div class="grid-servicos">
-        <div class="grid-servicos-item">ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
-      </div>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <div>
-        <p>
-          SERVIÇOS*
-        </p>
-        <ul>
-          <li>
-            ISOLAMENTO TÉRMICO (QUENTE E FRIO)
-          </li>
-          <li>
-            PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)
-          </li>
-          <li>
-            INJEÇÃO DE ESPUMA DE POLIURETANO
-          </li>
-          <li>
-            FUNILARIA ESPECIALIZADA
-          </li>
-          <li>
-            SISTEMAS ACÚSTICOS
-          </li>
-          <li>
-            PINTURA INDUSTRIAL
-          </li>
-          <li>
-            REVESTIMENTOS REFRATÁRIOS
-          </li>
-          <li>
-            PISOS ANTIÁCIDO
-          </li>
-          <li>
-            FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO
-          </li>
-          <li>
-            ANDAIMES INDUSTRIAIS
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p>
-          OBRAS REALIZADAS*
-        </p>
-
-        Clique nos links abaixo para visualizar as fotos das nossas obras:
-        <ul>
-          <li>
-            ALPINISMO INDUSTRIAL
-          </li>
-          <li>
-            ANDAIMES INDUSTRIAIS
-          </li>
-          <li>
-            REVESTIMENTO REFRATÁRIOS
-          </li>
-          <li>
-            FUNILARIA ESPECIALIZADA
-          </li>
-          <li>
-            ISOLAMENTO TÉRMICO
-          </li>
-          <li>
-            JATEAMENTO
-          </li>
-          <li>
-            PINTURA INDUSTRIAL
-          </li>
-          <li>
-            PISO ANTI-ÁCIDO
-          </li>
-          <li>
-            PROTEÇÃO PASSIVA CONTRA FOGO
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="secao-parceiros">
-      <h2>PARCEIROS /</h2>
-      <div class="grid-a">
-        <h3>FORNECEDORES</h3>
-        <p>
-          Temos, como parceiros em cada área de atuação, empresas de renome, no
-          cenário nacional e internacional, tais como:
-        </p>
-        <ul>
-          <li>
-            Morganite Brasil Ltda
-          </li>
-          <li>
-            Unifrax Brasil Ltda
-          </li>
-          <li>
-            IBAR Ltda
-          </li>
-          <li>
-            Akzo Nobel Ltda – Tintas International
-          </li>
-          <li>
-            Ind. de Isolantes Térmicos Calorisol Ltda
-          </li>
-          <li>
-            Rockfibras Isolantes Térmicos e Acústicos
-          </li>
-          <li>
-            Sherwin Williams do Brasil – Tintas Sumaré
-          </li>
-          <li>
-            Polyurethane Indústria e Comércio Ltda
-          </li>
-          <li>
-            TST Isolantes Térmicos e Refratários Ltda
-          </li>
-          <li>
-            Altec Alumínio Ltda
-          </li>
-          <li>
-            Fibertex Louveira Produtos Têxteis Ltda
-          </li>
-          <li>
-            SH Andaimes
-          </li>
-        </ul>
-      </div>
-      <div class="grid-b">
-        <h3>CLIENTES</h3>
-        <p>
-          Contratos, nas diversas especialidades, em clientes de médio e grande
-          porte, tais como:
-        </p>
-        <ul>
-          <li>
-            Petróleo Brasileiro S/A - PETROBRAS
-          </li>
-          <li>
-            Bayer S/A
-          </li>
-          <li>
-            Petrobrás Distribuidora S/A – PETROBRÁS BR
-          </li>
-          <li>
-            Alfa Laval Aalborg Ind. e Com. Ltda
-          </li>
-          <li>
-            GE Celma S/A
-          </li>
-          <li>
-            UTE Norte Fluminense S/A
-          </li>
-          <li>
-            Gerdau Aços Longos S/A
-          </li>
-          <li>
-            SBM Offshore
-          </li>
-          <li>
-            Estaleiro Brasa
-          </li>
-          <li>
-            Siemens
-          </li>
-          <li>
-            Usina Elétrica a Gás de Araucária - UEGA
-          </li>
-          <li>
-            Furnas
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="secao-certificados">
-      <h2>CERTIFICAÇÕES /</h2>
-      DOWNLOADS*
-
-      <div>
-        CERTIFICAÇÕES [
-        <ul>
-          <li>
-            CERTIFICAÇÃO ISO 9001:2015
-          </li>
-
-          <li>
-            CERTIFICAÇÃO OHSAS 18001:2007
-          </li>
-
-          <li>
-            Cadastro de registro de profissionais ou entidades habilitadas para
-            exercer atividades de segurança contra incêndio e pânico junto à
-            Diretoria de Serviços Técnicos do Corpo de Bombeiros do Estado do
-            Rio de janeiro
-            <a href="">
-              HABILITAÇÃO CBMERJ - CREDENCIAMENTO PARA ATIVIDADES DE SEGURANÇA
-              CONTRA INCÊNDIO
-            </a>
-          </li>
-        </ul>
-        ]
-      </div>
-    </div>
-
     <div id="secao-contato">
       <h2>CONTATO /</h2>
       <li>
@@ -353,3 +367,4 @@
     </div>
   </body>
 </html>
+
