--- a/index.html
+++ b/index.html
@@ -27,134 +27,71 @@
     <div id="secao-servicos">
       <div>
         <h2>SERVIÇOS /</h2>
+        <p>Temos muita experiência</p>
         <div class="grid-servicos">
           <div>ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
           <div>PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)</div>
           <div>INJEÇÃO DE ESPUMA DE POLIURETANO</div>      
+          <div>FUNILARIA ESPECIALIZADA</div>      
+          <div>SISTEMAS ACÚSTICOS</div>      
+          <div>PINTURA INDUSTRIAL</div>      
+          <div>REVESTIMENTOS REFRATÁRIOS</div>      
+          <div>PISOS ANTIÁCIDO</div>      
+          <div>FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO</div>      
+          <div>ANDAIMES INDUSTRIAIS</div>      
         </div>
       </div>
 
-      <!--
-      <div>
-        <p>
-          SERVIÇOS*
-        </p>
-        <ul>
-          <li class="servico">
-            ISOLAMENTO TÉRMICO (QUENTE E FRIO)
-          </li>
-          <li class="servico">
-            PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)
-          </li>
-          <li class="servico">
-            INJEÇÃO DE ESPUMA DE POLIURETANO
-          </li>
-          <li class="servico">
-            FUNILARIA ESPECIALIZADA
-          </li>
-          <li class="servico">
-            SISTEMAS ACÚSTICOS
-          </li>
-          <li class="servico">
-            PINTURA INDUSTRIAL
-          </li>
-          <li class="servico">
-            REVESTIMENTOS REFRATÁRIOS
-          </li>
-          <li class="servico">
-            PISOS ANTIÁCIDO
-          </li>
-          <li class="servico">
-            FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO
-          </li>
-          <li class="servico">
-            ANDAIMES INDUSTRIAIS
-          </li>
-        </ul>
-      </div>
-      -->
-
       <div>
         <h2>OBRAS /</h2>
-
-        <p>
-          Modalidades além do funilaria
-        </p>
+        <p>Modalidades além da funilaria</p>
         <div class="grid-obras">
           <div>ALPINISMO INDUSTRIAL</div>
           <div>ANDAIMES INDUSTRIAIS</div>
           <div>REVESTIMENTO REFRATÁRIOS</div>      
+          <div>FUNILARIA ESPECIALIZADA</div>      
+          <div>ISOLAMENTO TÉRMICO</div>      
+          <div>JATEAMENTO</div>      
+          <div>PINTURA INDUSTRIAL</div>      
+          <div>PISO ANTI-ÁCIDO</div>      
+          <div>PROTEÇÃO PASSIVA CONTRA FOGO</div>      
         </div>
-
-        <!--
-        <ul>
-          <li>
-            ALPINISMO INDUSTRIAL
-          </li>
-          <li>
-            ANDAIMES INDUSTRIAIS
-          </li>
-          <li>
-            REVESTIMENTO REFRATÁRIOS
-          </li>
-          <li>
-            FUNILARIA ESPECIALIZADA
-          </li>
-          <li>
-            ISOLAMENTO TÉRMICO
-          </li>
-          <li>
-            JATEAMENTO
-          </li>
-          <li>
-            PINTURA INDUSTRIAL
-          </li>
-          <li>
-            PISO ANTI-ÁCIDO
-          </li>
-          <li>
-            PROTEÇÃO PASSIVA CONTRA FOGO
-          </li>
-        </ul>
-        -->
-
       </div>
+
     </div>
 
     <div id="secao-certificados">
       <h2>CERTIFICAÇÕES /</h2>
 
-      <div>
-        <ul>
-          <li>
-            <p>CERTIFICAÇÃO ISO 9001:2015</p>
-            <p>DOWNLOADS AQUI</p>
-          </li>
+      <div class="grid-certificados">
+        <div>
+          <p>CERTIFICAÇÃO ISO 9001:2015</p>
+          <p>DOWNLOADS AQUI</p>
+        </div>
 
-          <li>
-            <p>CERTIFICAÇÃO OHSAS 18001:2007</p>
-            <p>DOWNLOADS AQUI</p>
-          </li>
+        <div>
+          <p>CERTIFICAÇÃO OHSAS 18001:2007</p>
+          <p>DOWNLOADS AQUI</p>
+        </div>
 
-          <li>
-            <p>
-              Cadastro de registro de profissionais ou entidades habilitadas para
-              exercer atividades de segurança contra incêndio e pânico junto à
-              Diretoria de Serviços Técnicos do Corpo de Bombeiros do Estado do
-              Rio de janeiro
-            </p>
-            <a href="">
-              HABILITAÇÃO CBMERJ - CREDENCIAMENTO PARA ATIVIDADES DE SEGURANÇA
-              CONTRA INCÊNDIO
-            </a>
-          </li>
-        </ul>
+        <div>
+          <p>
+            Cadastro de registro de profissionais ou entidades habilitadas para
+            exercer atividades de segurança contra incêndio e pânico junto à
+            Diretoria de Serviços Técnicos do Corpo de Bombeiros do Estado do
+            Rio de janeiro
+          </p>
+          <a href="">
+            HABILITAÇÃO CBMERJ - CREDENCIAMENTO PARA ATIVIDADES DE SEGURANÇA
+            CONTRA INCÊNDIO
+          </a>
+        </div>
       </div>
     </div>
 
     <div id="secao-parceiros">
       <h2>PARCEIROS /</h2>
-      <div class="grid-a">
+      <div class="grid-clientes">
         <h3>CLIENTES</h3>
         <p>
           Contratos, nas diversas especialidades, em clientes de médio e grande
@@ -199,10 +136,11 @@
           </li>
         </ul>
       </div>
-      <div class="grid-b">
+      <div>
         <h3>FORNECEDORES</h3>
         <p>
-          Trabalhamos com os melhores da indústria
+          Trabalhamos com os melhores da indústria em cada área de atuação, empresas de renome, no
+          cenário nacional e internacional.
         </p>
         <!--
         <p>
@@ -210,44 +148,44 @@
           cenário nacional e internacional, tais como:
         </p>
         -->
-        <ul>
-          <li>
+        <div class="grid-fornecedores">
+          <div>
             Morganite Brasil Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             Unifrax Brasil Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             IBAR Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             Akzo Nobel Ltda – Tintas International
-          </li>
-          <li>
+          </div>
+          <div>
             Ind. de Isolantes Térmicos Calorisol Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             Rockfibras Isolantes Térmicos e Acústicos
-          </li>
-          <li>
+          </div>
+          <div>
             Sherwin Williams do Brasil – Tintas Sumaré
-          </li>
-          <li>
+          </div>
+          <div>
             Polyurethane Indústria e Comércio Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             TST Isolantes Térmicos e Refratários Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             Altec Alumínio Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             Fibertex Louveira Produtos Têxteis Ltda
-          </li>
-          <li>
+          </div>
+          <div>
             SH Andaimes
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </div>
 
