Adição de imagens de serviços e organização em grid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SIFC</title>
   </head>
   <body>
-    <div id="sifc">
+    <div id="inicio">
       <p>
         Somos uma empresa que vai isolar o seu térmico! Aparecendo com paralax e imagem de fundo ficando parada por trás da navbar qndo scrolla
       </p>
@@ -20,7 +20,7 @@
     <div id="navbar">
       <a href="#secao-servicos">serviços</a>
       <a href="#secao-certificados">certificados</a>
-      <a href="#sifc"><img id="logo" src="img/logo-puro.png" alt="" /></a>
+      <a href="#inicio"><img id="logo" src="img/logo-puro.png" alt="" /></a>
       <a href="#secao-parceiros">parceiros</a>
       <a href="#secao-empresa">empresa</a>
       <a href="#secao-contato">contato</a>
@@ -32,18 +32,54 @@
         <h2>SERVIÇOS /</h2>
         <p>Temos muita experiência</p>
         <div class="grid-servicos">
-          <div>ISOLAMENTO TÉRMICO (QUENTE E FRIO)</div>
-          <div>PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)</div>
-          <div>INJEÇÃO DE ESPUMA DE POLIURETANO</div>      
-          <div>FUNILARIA ESPECIALIZADA</div>      
-          <div>SISTEMAS ACÚSTICOS</div>      
-          <div>PINTURA INDUSTRIAL</div>      
-          <div>REVESTIMENTOS REFRATÁRIOS</div>      
-          <div>PISOS ANTIÁCIDO</div>      
-          <div>FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO</div>      
-          <div>ANDAIMES INDUSTRIAIS</div>      
-          <div>JATEAMENTO</div>      
-          <div>ALPINISMO INDUSTRIAL</div>
+          <div>
+            <img src="img/servicos/isolamento.jpg" alt="">
+            <p>ISOLAMENTO TÉRMICO (QUENTE E FRIO)</p>
+          </div>
+          <div>
+            <img src="img/servicos/incendio.png" alt="">
+            <p>PROTEÇÃO PASSIVA CONTRA INCÊNDIO (PPCI)</p>
+          </div>
+          <div>
+            <img src="img/servicos/espuma.jpg" alt="">
+            <p>INJEÇÃO DE ESPUMA DE POLIURETANO</p>
+          </div>      
+          <div>
+            <img src="img/servicos/funilaria.jpg" alt="">
+            <p>FUNILARIA ESPECIALIZADA</p>
+          </div>      
+          <div>
+            <img src="img/servicos/acustico.jpg" alt="">
+            <p>SISTEMAS ACÚSTICOS</p>
+          </div>      
+          <div>
+            <img src="img/servicos/pintura.jpg" alt="">
+            <p>PINTURA INDUSTRIAL</p>
+          </div>      
+          <div>
+            <img src="img/servicos/refratarios.jpg" alt="">
+            <p>REVESTIMENTOS REFRATÁRIOS</p>
+          </div>      
+          <div>
+            <img src="img/servicos/pisos.jpg" alt="">
+            <p>PISOS ANTIÁCIDO</p>
+          </div>      
+          <div>
+            <img src="img/servicos/fibra.png" alt="">
+            <p>FABRICAÇÃO E RECUPERAÇÃO EM FIBRA DE VIDRO</p>
+          </div>      
+          <div>
+            <img src="img/servicos/andaimes.jpg" alt="">
+            <p>ANDAIMES INDUSTRIAIS</p>
+          </div>      
+          <div>
+            <img src="img/servicos/jateamento.jpeg" alt="">
+            <p>JATEAMENTO</p>
+          </div>      
+          <div>
+            <img src="img/servicos/alpinismo.jpeg" alt="">
+            <p>ALPINISMO INDUSTRIAL</p>
+          </div>
         </div>
       </div>
 
