Adição de imagens de clientes e organização em grid

--- a/index.html
+++ b/index.html
@@ -118,50 +118,62 @@
 
     <div id="secao-parceiros">
       <h2>PARCEIROS /</h2>
-      <div class="grid-clientes">
+      <div>
         <h3>CLIENTES</h3>
         <p>
           Contratos, nas diversas especialidades, em clientes de médio e grande
           porte, tais como:
         </p>
-        <ul>
-          <li>
-            Petróleo Brasileiro S/A - PETROBRAS
-          </li>
-          <li>
-            Bayer S/A
-          </li>
-          <li>
-            Petrobrás Distribuidora S/A – PETROBRÁS BR
-          </li>
-          <li>
-            Alfa Laval Aalborg Ind. e Com. Ltda
-          </li>
-          <li>
-            GE Celma S/A
-          </li>
-          <li>
-            UTE Norte Fluminense S/A
-          </li>
-          <li>
-            Gerdau Aços Longos S/A
-          </li>
-          <li>
-            SBM Offshore
-          </li>
-          <li>
-            Estaleiro Brasa
-          </li>
-          <li>
-            Siemens
-          </li>
-          <li>
-            Usina Elétrica a Gás de Araucária - UEGA
-          </li>
-          <li>
-            Furnas
-          </li>
-        </ul>
+        <div class="grid-clientes">
+          <div>
+            <img src="img/clientes/petrobras.png" alt="">
+            <p>Petróleo Brasileiro S/A - PETROBRAS</p>
+          </div>
+          <div>
+            <img src="img/clientes/bayer.png" alt="">
+            <p>Bayer S/A</p>
+          </div>
+          <div>
+            <img src="img/clientes/petrobras.png" alt="">
+            <p>Petrobrás Distribuidora S/A – PETROBRÁS BR</p>
+          </div>
+          <div>
+            <img src="img/clientes/Alfa Laval.png" alt="">
+            <p>Alfa Laval Aalborg Ind. e Com. Ltda</p>
+          </div>
+          <div>
+            <img src="img/clientes/GE.png" alt="">
+            <p>GE Celma S/A</p>
+          </div>
+          <div>
+            <img src="img/clientes/UTE.jpg" alt="">
+            <p>UTE Norte Fluminense S/A</p>
+          </div>
+          <div>
+            <img src="img/clientes/gerdau.png" alt="">
+            <p>Gerdau Aços Longos S/A</p>
+          </div>
+          <div>
+            <img src="img/clientes/sbm.png" alt="">
+            <p>SBM Offshore</p>
+          </div>
+          <div>
+            <img src="img/clientes/brasa.png" alt="">
+            <p>Estaleiro Brasa</p>
+          </div>
+          <div>
+            <img src="img/clientes/siemens.png" alt="">
+            <p>Siemens</p>
+          </div>
+          <div>
+            <img src="img/clientes/uega.jpeg" alt="">
+            <p>Usina Elétrica a Gás de Araucária - UEGA</p>
+          </div>
+          <div>
+            <img src="img/clientes/furnas.png" alt="">
+            <p>Furnas</p>
+          </div>
+        </div>
 
         <div>
           <h2>OBRAS /</h2>
